<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="@dimen/dp_88"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/recentRead"
            android:layout_width="@dimen/dp_60"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/dp_4"
            android:text="最近阅读"
            android:textColor="@color/light"
            android:textSize="@dimen/dp_8"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/book_cover"
            app:layout_constraintStart_toStartOf="@id/book_cover"
            tools:layout_editor_absoluteY="74dp"/>

    <ImageView
            android:elevation="@dimen/dp_4"
            android:background="@drawable/empty_cover"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_4"
            android:id="@+id/book_cover"
            android:layout_width="@dimen/dp_80"
            android:scaleType="fitXY"
            android:layout_height="@dimen/dp_110"
            android:transitionName="@string/set_book_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/book_name"
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_4"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="1"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textStyle="bold"
            android:text="bookName"
            android:transitionName="@string/set_book_name"
            android:textSize="@dimen/dp_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_cover"/>

    <TextView
            android:id="@+id/book_author"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_4"
            android:layout_width="@dimen/dp_80"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_6"
            android:ellipsize="marquee"
            android:transitionName="@string/set_book_author"
            android:singleLine="true"
            android:textSize="@dimen/dp_14"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_name"/>


</android.support.constraint.ConstraintLayout>