<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.BookDetailActivity">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_42"
            android:background="@color/light"
            android:elevation="@dimen/dp_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/light_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout">
        <android.support.constraint.ConstraintLayout
                android:layout_marginBottom="@dimen/dp_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.constraint.ConstraintLayout
                    android:id="@+id/book_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/dp_2"
                    android:background="@drawable/round_bg_white"
                    android:layout_margin="@dimen/dp_16"
                    android:padding="@dimen/dp_4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:id="@+id/book_cover"
                            android:elevation="@dimen/dp_4"
                            android:layout_margin="@dimen/dp_6"
                            android:background="@drawable/empty_cover"
                            android:layout_width="@dimen/dp_80"
                            android:scaleType="fitXY"
                            android:layout_height="@dimen/dp_110"
                            android:transitionName="@string/set_book_cover"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                            android:id="@+id/book_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:singleLine="true"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/dp_6"
                            android:layout_marginStart="@dimen/dp_6"
                            android:transitionName="@string/set_book_name"
                            android:text="bookName"
                            android:textSize="@dimen/dp_16"
                            app:layout_constraintStart_toEndOf="@id/book_cover"
                            app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                            android:id="@+id/book_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_6"
                            android:ellipsize="marquee"
                            android:transitionName="@string/set_book_author"
                            android:singleLine="true"
                            android:textSize="@dimen/dp_14"
                            android:text="TextView"
                            app:layout_constraintStart_toStartOf="@id/book_name"
                            app:layout_constraintTop_toBottomOf="@id/book_name"/>

                    <TextView
                            android:id="@+id/add_time"
                            android:textSize="@dimen/dp_12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/hint"
                            android:layout_marginTop="@dimen/dp_6"
                            app:layout_constraintStart_toStartOf="@id/book_name"
                            app:layout_constraintTop_toBottomOf="@id/book_author"/>

                    <TextView
                            android:id="@+id/introduction_entry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBaseline_toBaselineOf="@id/add_time"
                            android:textColor="@color/hint"
                            android:text="图书简介"
                            android:layout_marginTop="@dimen/dp_6"
                            app:layout_constraintEnd_toEndOf="parent"
                    />

                </android.support.constraint.ConstraintLayout>


            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                    android:id="@+id/read_stat_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/dp_2"
                    android:paddingStart="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_8"
                    android:background="@drawable/round_bg_white"
                    android:layout_margin="@dimen/dp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/book_detail">

                <android.support.constraint.ConstraintLayout
                        android:id="@+id/recommend_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_8"
                        android:background="@drawable/diviner_bottom"
                        app:layout_constraintTop_toTopOf="parent">
                    <ImageView android:layout_width="@dimen/dp_14" android:layout_height="@dimen/dp_14"
                               android:id="@+id/recommend_logo"
                               android:src="@drawable/ic_newbook_tags"
                               app:layout_constraintStart_toStartOf="parent"
                               app:layout_constraintTop_toTopOf="parent"
                               app:layout_constraintBottom_toBottomOf="parent"
                    />

                    <TextView
                            android:layout_width="0dp" android:layout_height="wrap_content"
                            android:text="常用分类"
                            android:textSize="@dimen/dp_14"
                            android:layout_marginStart="@dimen/dp_4"
                            android:textColor="@color/colorPrimary"
                            app:layout_constraintStart_toEndOf="@id/recommend_logo"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:gravity="start"
                    />

                </android.support.constraint.ConstraintLayout>

                <android.support.v7.widget.RecyclerView
                        android:id="@+id/tag_recommend_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_4"
                        android:paddingBottom="@dimen/dp_4"
                        android:background="@drawable/diviner_bottom"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recommend_title"/>

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/add_tag_hint"
                          android:text="@string/add_tag_tip"
                          android:textColor="@color/hint"
                          android:textSize="@dimen/dp_12"
                          android:gravity="center"
                          android:padding="@dimen/dp_4"
                          app:layout_constraintTop_toBottomOf="@id/tag_recommend_recycler_view"
                />

                <include layout="@layout/add_tag_entry"
                         android:layout_width="@dimen/dp_100"
                         android:layout_height="@dimen/dp_36"
                         android:layout_marginBottom="@dimen/dp_8"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/add_tag_hint"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/read_log_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/dp_2"
                    android:paddingStart="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_8"
                    android:background="@drawable/round_bg_white"
                    android:layout_margin="@dimen/dp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/read_stat_container">

                <android.support.constraint.ConstraintLayout
                        android:id="@+id/read_log_title_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_8"
                        android:background="@drawable/diviner_bottom"
                        app:layout_constraintTop_toTopOf="parent">
                    <ImageView
                            android:id="@+id/read_log_logo"
                            android:layout_width="@dimen/dp_14"
                            android:layout_height="@dimen/dp_14"
                            android:src="@drawable/ic_book_details_reading_record"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                    />

                    <TextView
                            android:layout_width="0dp" android:layout_height="wrap_content"
                            android:text="阅读进度"
                            android:textSize="@dimen/dp_14"
                            android:layout_marginStart="@dimen/dp_4"
                            android:textColor="@color/colorPrimary"
                            app:layout_constraintStart_toEndOf="@id/read_log_logo"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:gravity="start"
                    />
                </android.support.constraint.ConstraintLayout>

                <android.support.v7.widget.RecyclerView
                        android:id="@+id/read_log_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/dp_4"
                        android:paddingBottom="@dimen/dp_4"
                        android:background="@drawable/diviner_bottom"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/read_log_title_container"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>